login and splash screen working

--- a/exercici1/app/src/main/res/drawable/splash_screen.xml
+++ b/exercici1/app/src/main/res/drawable/splash_screen.xml
@@ -2,7 +2,10 @@
 <layer-list
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/colorPrimary"/>
-    <bitmap
-        android:gravity="center"
-        android:src="@drawable/logo_uoc_default"/>
+    <item>
+        <bitmap
+            android:gravity="center"
+            android:src="@drawable/logo_uoc_default"/>
+    </item>
+
 </layer-list>
