--- a/exercici1/app/src/main/res/menu/activity_main_drawer.xml
+++ b/exercici1/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,34 +5,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/option_1"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/option_1" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/option_2"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="@string/option_2" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/option_3"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/option_3" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/option_4"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="@string/option_4" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
