--- a/exercici1/app/src/main/res/menu/activity_main_drawer.xml
+++ b/exercici1/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,7 @@
             android:title="@string/option_2" />
         <item
             android:id="@+id/option_3"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_share"
             android:title="@string/option_3" />
         <item
             android:id="@+id/option_4"
