--- a/exercici1/app/src/main/res/layout/activity_main.xml
+++ b/exercici1/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,14 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <ProgressBar
+        android:id="@+id/cities_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
+
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
