--- a/exercici1/app/src/main/res/layout/fragment_city.xml
+++ b/exercici1/app/src/main/res/layout/fragment_city.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
+
+    <ImageView
+        android:id="@+id/element_image"
+        android:contentDescription="@string/city_image_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
